--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ description: the good site of life
             {% elsif i == 1 %}
                 <a class="btn" href="{{ site.baseurl }}/">{{ i }}</a>
             {% else %}
-                <a class="btn" href="/page/{{ i }}">{{ i }}</a>
+                <a class="btn" href="{{ site.baseurl }}/page/{{ i }}">{{ i }}</a>
             {% endif %}
         {% endfor %}
 
